src/app/globals.css
@import "tailwindcss";
@import "../components/Video/Player.css";

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme {
  /* ========== COLORS ========== */
  --color-player-controls: oklch(72.3% 0.219 149.579);
  --color-credits: #36a9c3;
  --color-credits-name: #ff97f5;
  --space-credits-space: 10px;

  /* ========== BREAKPOINT ========== */
  --breakpoint-xs: 412px;
  --breakpoint-sm: 640px;
  --breakpoint-md: 769px;
  --breakpoint-lg: 1024px;
  --breakpoint-xl: 1280px;
  --breakpoint-2xl: 1536px;
  --breakpoint-3xl: 1750px;

  /* ========== FONT ========== */
  --font-inter: var(--font-inter);
  --font-jet-brains: var(--font-jet-brains);

  /* ========== TEXT ========== */
  --text-2xs: 0.8rem;
  --text-2xs--line-height: 1.1rem;
  --text-xs: 0.868rem;
  --text-xs--line-height: 1.1875rem;
  --text-sm: 1.042rem;
  --text-sm--line-height: 1.375rem;
  --text-sm--letter-spacing: 0em;
  --text-base: 1.25rem;
  --text-base--line-height: 1.6875rem;
  --text-lg: 1.5rem;
  --text-lg--line-height: normal;
  --text-xl: 1.8rem;
  --text-xl--line-height: normal;
  --text-2xl: 2.16rem;
  --text-2xl--line-height: normal;
  --text-3xl: 2.592rem;
  --text-3xl--line-height: normal;
  --text-4xl: 3.11rem;
  --text-4xl--line-height: normal;
}

@layer components {
  .custom-link {
    @apply underline text-amber-500 hover:text-amber-400 underline-offset-3;
  }
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
}

